Changes since 0.7.0
==========================================================================

Changes since 0.6.0
==========================================================================
Mon Jul 31 2017
    Improve TypeCheck output (#31)

Sun Jul 30 2017
    * Add `__float128` (fixes #33)

Mon Maz 22 2017
    * Support clang’s __builtin_convertvector (Fixes #34)

Wed Mar 8 2017
    * Move file and parent information to new datatype FilePosition for performance reasons

Changes since 0.5.0
==========================================================================
Thu Feb 23 2017
  * Make gccParseCPPArgs grab the arg to -MF -MT and -MQ
Wed Feb 15 2017
  * In enums, allow multiple attribute specifiers per enumerator
Tue Feb 21 2017
  * Allow typedef redefinition if it denotes the same type
Tue Feb 21 2017
  * Change TypeDefRef to store Type, not Maybe Type
Tue Feb 14 2017
  * Parse (and ignore) Clang __attribute__((availability(id=major.minor.rev)))
Sun Sep 11 2016
  * Add __builtin_bswap32/64.
Wed Jun 22 2016
  * Add '_Alignof' to Lexer.x (fixes #7)
Mon Jun 27 2016
  * Updates for C11 (part 1)
  * _Nullable and _Nonnull support as well as Warnings/lint fixes provided by Anthony Cowley (https://github.com/acowley)
Wed Mar 16 2016
  * Consider storage specifier "ThreadSpec" for global and local declarations
Tue Mar 15 2016
  * Support C11 _NoReturn, genearlize is_inline to FunSpecs (Syntax) / FunAttrs (SemRep)

Changes since 0.4.3
==========================================================================
Wed Mar 2 2016
  * Add direct base type BaseInt128 (complements previous __int128 patch)
    ryan.gl.scott@gmail.com
Sun Feb 28 2016
  * Parse gcc-specific __int128 type
Thu Dec 4 2014
  * Scott Kovach <dskovach@gmail.com>: added derived Eq,Ord instances to NodeInfo

Changes since 0.4.2
==========================================================================
Sat Jan 11 2014
  * Allow unicode characters in string/char literals and filenames
Mon Oct 27 2014