@@ -1,5 +1,5 @@
 Name:           language-c
-Version:        0.7.0
+Version:        0.7.1
 Cabal-Version:  >= 1.8
 Build-Type:     Simple
 License:        BSD3
