@@ -2,6 +2,7 @@ TESTS=analysis_enum \
       analysis_ext_decls \
       analysis_local_decls \
       analysis_type_check attributes \
+      builtins \
       bug5_dos_newline bugn6_empty_file bug21_sem_typedef \
       bug22_file_permission_cpp bug30_preserve_int_repr bug31_pp_if_else \
       bug20130805_nopos \
