@@ -1,6 +1,9 @@
 Changes since 0.7.0
 ==========================================================================
 
+Sat Nov 25 00:46:33 2017 -0600
+    add support for _Float128 (#41)
+
 Changes since 0.6.0
 ==========================================================================
 Mon Jul 31 2017
